<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.nicehiro.viewimp.MainActivity">

    <Button
        android:id="@+id/show_decor_fg"
        style="@style/ButtonStyle"
        android:text="@string/button1"/>
    <Button
        android:id="@+id/hide_decor_fg"
        style="@style/ButtonStyle"
        android:text="@string/button2"/>
    <Button
        android:id="@+id/add_view_to_decor"
        style="@style/ButtonStyle"
        android:text="@string/button3"/>
    <Button
        android:id="@+id/remove_view_from_decor"
        style="@style/ButtonStyle"
        android:text="@string/button4"/>
    <Button
        android:id="@+id/simple_window"
        style="@style/ButtonStyle"
        android:text="@string/button5"/>
    <Button
        android:id="@+id/pupup_window"
        style="@style/ButtonStyle"
        android:text="@string/button6"/>
</LinearLayout>
